fix en vi, change theme

--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -594,7 +594,7 @@
       "actionableRoadmap": "Lộ trình hành động cụ thể"
     },
     "brandingPerformance": {
-      "title1": "KHÔNG CÒN THẤT BẠI",
+      "title1": "KHÔNG CÒN Floop",
       "title2": "CHỈ CÓ TIỀN THẬT",
       "subtitle": "Bạn không cần thêm một chiến dịch khó có thể thành công nữa.",
       "highlightSubtitle": "Bạn cần một đối tác marketing làm cho quầy thu ngân kêu leng keng.",
